AF-70: Replacing Nashorn Javascript Engine with GraalVM (#57)
* AF-70: Replacing Nashorn Javascript Engine with GraalVM

* AF-70: Replacing Nashorn Javascript Engine with GraalVM

AF-70: Replacing Nashorn Javascript Engine with GraalVM

* Java 17 support

* Java 17 support

* Java 17 support